# search_engine

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: converter_json.cpp.B99D936EAD06D703.idx  converter_json.h.421CC5F40103FA03.idx  custom_functions.cpp.ABEF063530CC4507.idx  custom_functions.h.9D0B66BB1F5B6EBD.idx  inverted_index.cpp.7712FA23AB8C2F73.idx  inverted_index.h.F0C8BC5DD69BC397.idx  main.cpp.74800E9D33B119FF.idx  main_ss.cpp.EB2143BAA728BC5A.idx  project_constants.h.98311C7698751777.idx  screen_writer.cpp.06B34212453A4971.idx  screen_writer.h.33644FC1C0FD5493.idx  search_server.cpp.66CDC315755ABDCC.idx  search_server.h.B3DA1B3B847F2D45.idx  test_main.cpp.2FF6AB4334208735.idx
JSONs/: config.json  requests.json  results.json
docs/html/: annotated.html  classCmd-members.html  classCmd.html  classConverterJSON-members.html  classConverterJSON.html  classFileReader-members.html  classFileReader.html  classInvertedIndex-members.html  classInvertedIndex.html  classScreenWriter-members.html  classScreenWriter.html  classSearchServer-members.html  classSearchServer.html  classShell-members.html  classShell.html  classes.html  cmd_8h_source.html  converter__json_8h_source.html  custom__functions_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  file__reader_8h_source.html  files.html  formatting_8h_source.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  inverted__index_8h_source.html  namespacecustom.html  namespaceformat.html  namespaceformat_1_1unicode.html  namespaceformat_1_1utf.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  project__constants_8h_source.html  project__types_8h_source.html  screen__writer_8h_source.html  (+6 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  namespaces_0.js  namespaces_1.js  searchdata.js  variables_0.js
docs/latex/: annotated.tex  classConverterJSON.tex  classFileReader.tex  classInvertedIndex.tex  classScreenWriter.tex  classSearchServer.tex  namespacecustom.tex  namespaceformat.tex  namespaceformat_1_1unicode.tex  namespaceformat_1_1utf.tex  namespaces.tex  refman.aux  refman.idx  refman.out  refman.tex  refman.toc  structDocRelevance.tex  structRelativeIndex.tex
docs/man/man3/: Cmd.3  ConverterJSON.3  DocRelevance.3  FileReader.3  InvertedIndex.3  RelativeIndex.3  ScreenWriter.3  SearchServer.3  Shell.3  custom.3  format.3  format_unicode.3  format_utf.3
include/: FileHelper.h  cmd.h  converter_json.h  custom_functions.h  custom_limits.h  file_helper.h  file_reader.h  formatting.h  inverted_index.h  manager.h  observer.h  project_constants.h  project_types.h  screen_writer.h  search_server.h  shell.h
install_files/: .install_nix.swp  config.json  help.json  install_nix  install_win.py  intall_test  requests.json
jsons/: config.json  requests.json
nlohmann_json/tests/src/: unit-json_patch.cpp  unit-large_json.cpp
resources/: Conspect1.txt  Conspect4.txt  Conspect5.txt  Conspect8.txt  Conspect9.txt  arab_text.txt  chinese_text.txt  english_text.txt  file001.txt  file002.txt  file003.txt  file004.txt  russian_text.txt  spanish_text.txt  text1.txt  text2.txt  text3.txt  text4.txt  text5.txt  text6.txt
src/: CMakeLists.txt  FileHelper.cpp  cmd.cpp  converter_json.cpp  custom_functions.cpp  file_helper.cpp  file_reader.cpp  formating.cpp  formatting.cpp  inverted_index.cpp  main.cpp  main_shell.cpp  main_simple.cpp  main_ss.cpp  manager.cpp  screen_writer.cpp  screenwriter.cpp  search_server.cpp  shell.cpp
test/: CMakeLists.txt  test_main.cpp
test/JSONs_test/: config.json  requests.json  results.json
test/jsons/: requests.json
test/jsons_test/: answers.json  config.json
test/resources_test/: file004.txt  test_basic2.txt
